--- a/style.css
+++ b/style.css
@@ -93,3 +93,12 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+nav {
+    position: relative;
+}
+
+#user-identification {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
