--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ button:hover {
 }
 
 footer {
+
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
     background-color: #333;
     color: #fff;
     text-align: center;
