--- a/style_produits.css
+++ b/style_produits.css
@@ -98,6 +98,11 @@ button:hover {
 }
 
 footer {
+	
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
     background-color: #333;
     color: #fff;
     text-align: center;
